0.6.0 (unreleased)
------------------
 - Add missing `name` attributes to xsd.QName and xsd.NOTATION (#15)
 - Various fixes related to the Choice element
 - Support xsd:include
 - Experimental support for HTTP bindings


0.5.0 (2015-05-08)
------------------
 - Handle attributes during parsing of the response values>
 - Don't create empty soap objects when the root element is empty.
 - Implement support for WSSE usernameToken profile including 
   passwordText/passwordDigest.
 - Improve XSD date/time related builtins.
 - Various minor XSD handling fixes 
 - Use the correct soap-envelope XML namespace for the Soap 1.2 binding
 - Use `application/soap+xml` as content-type in the Soap 1.2 binding
 - **backwards incompatible**: Make cache part of the transport object 
   instead of the client.  This changes the call signature of the Client() 
   class.  (Marek Wywiał)
 - Add the `verify` kwarg to the Transport object to disable ssl certificate
   verification. (Marek Wywiał)


0.4.0 (2016-04-17)
------------------
 - Add defusedxml module for XML security issues
 - Add support for choice elements
 - Fix documentation example for complex types (Falk Schuetzenmeister)


0.3.0 (2016-04-10)
------------------
 - Correctly handle recursion in WSDL and XSD files
 - Add support for the XSD Any element
 - Allow usage of shorthand prefixes when creating elements and types
 - And more various improvements


0.2.5 (2016-04-05)
------------------
 - Temporarily disable the HTTP binding support until it works properly
 - Fix an issue with parsing SOAP responses with optional elements


0.2.4 (2016-04-03)
------------------
 - Improve xsd.DateTime, xsd.Date and xsd.Time implementations by using the
   isodate module.
 - Implement xsd.Duration 


0.2.3 (2016-04-03)
------------------
 - Fix xsd.DateTime, xsd.Date and xsd.Time implementations
 - Handle NIL values correctly for simpletypes


0.2.2 (2016-04-03)
------------------