@@ -70,13 +70,6 @@ class Client(object):
             port = list(service.ports.values())[0]
         return ServiceProxy(self, port)
 
-    def get_port(self, service=None, port=None):
-        message = "This method will be removed in 0.6, please use bind()"
-        warnings.warn(message, DeprecationWarning, stacklevel=1)
-
-        service = list(self.wsdl.services.values())[0]
-        return list(service.ports.values())[0]
-
     def get_type(self, name):
         return self.wsdl.schema.get_type(name)
 
