@@ -4,6 +4,7 @@
  - Various fixes related to the Choice element
  - Support xsd:include
  - Experimental support for HTTP bindings
+ - Removed `Client.get_port()`, use `Client.bind()`.
 
 
 0.5.0 (2015-05-08)
